maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not found: value o
      for (j <- o to getMondeHauteur() -1){
                ^JediEscaper:16: error: not found: value o
      for (j <- o to getMondeHauteur() -1){
                ^